# Make-A-Fortune

./: README.md  pyproject.toml  task_messages.py
api/: daily_sentence.py  weather.py
data/: header.json  weather.json
models/: header_models.py  weather_models.py
settings/: base.py  development.py  production.py  settings.py
wechat/: date_calculation.py  deepseek.py  task.py  template.py  test.py  utils.py
