[project]
name = "local-wechat"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "black>=25.1.0",
    "cryptography>=45.0.6",
    "openai>=1.101.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "wxauto>=39.1.15",
    "wxautox>=39.1.39",
]
